--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "expo-image-picker": "~14.1.1",
     "react-native-maps": "1.3.2",
-    "expo-location": "~15.1.1"
+    "expo-location": "~15.1.1",
+    "expo-av": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
